--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:L1A2D3O20%23@localhost:3306/db.vem_pra_quadra"
+DATABASE_URL="mysql://b0eabefc25d182:0694f9cc@us-cdbr-east-06.cleardb.net/heroku_1700fc8b6ab2194?reconnect=true"
